[feat/BE] : 연표 수정
- 데이터 송수신 양식 수정
