# server/public/swagger.yaml
@@ -720,7 +720,7 @@ paths:
           schema:
             type: object
             properties:
-              year:
+              idxOrder:
                 type: integer
                 properties:
                   title:
@@ -731,6 +731,8 @@ paths:
                     type: integer
                   check:
                     type: boolean
+                  idx:
+                    type: integer
     put:
       tags:
         - timelines
